fix(home): remove horizontal scroll

--- a/store/static/css/style.css
+++ b/store/static/css/style.css
@@ -140,7 +140,7 @@ header a:hover .logo-title {
 
 .hero {
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     height: 100svh;
     height: 100dvh;
